# SkyViz

./: .gitignore  .gitmodules  README.md  frames_2025-07-21_15.57.28.gv  frames_2025-08-05_14.06.41.gv  requirements.txt  tmp_server.yaml
src/drone_viz/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
src/drone_viz/config/: drones.yaml
src/drone_viz/include/drone_viz/: clicked_point_marker.hpp  drone.hpp  drone_control_widget.hpp  flight_client_node.hpp  main_panel.hpp  waypoint_tool.hpp
src/drone_viz/launch/: arena.launch.py
src/drone_viz/rviz/: arena.rviz
src/drone_viz/scripts/: drone_tf_broadcaster.py  dummy_arm_service.py
src/drone_viz/src/: clicked_point_marker.cpp  drone.cpp  drone_control_widget.cpp  main_panel.cpp  waypoint_tool.cpp
src/drone_viz/urdf/: crazyflie.urdf  drone_arena.urdf  drone_arena.xacro  drone_params.xacro
src/drone_viz_interfaces/: CMakeLists.txt  package.xml
src/drone_viz_interfaces/msg/: Command.msg
src/drone_viz_interfaces/srv/: FlightService.srv
src/mocap_drone_interface/: .gitignore  README.md  package.xml  setup.cfg  setup.py
src/mocap_drone_interface/mocap_drone_interface/: flightclient.py  functions.py  nodeflight.py  rviz_mocap.py
src/mocap_drone_interface/mocap_drone_interface/config/: params.yaml
src/mocap_drone_interface/mocap_drone_interface/launch/: mocap_launch.launch.py
src/mocap_drone_interface/mocap_drone_interface/ros2tests/: rviz_mocap.py
