<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mocap_drone_interface</name>
  <version>0.0.2</version>
  <description>Takes motive data over wifi and creates Ros nodes that send position and controls for UAV autopilots.</description>
  <maintainer email="fox00330@umn.edu">optimalx</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>NatNetClient</exec_depend>
  <exec_depend>DataDescriptions</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>drone_viz_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
